syntax = "proto3";

package a75f.io.device;

option java_package = "a75f.io.device";
option java_outer_classname = "HyperStat";

enum HyperStatRequestType_e {
  HYPERSTAT_REQUEST_TYPE_UNKNOWN = 0; // default for unsupported decrypt, open-enums
  HYPERSTAT_REQUEST_TYPE_SETTINGS = 1; // standard device settings
  HYPERSTAT_REQUEST_TYPE_CONTROLS = 2; // standard device controls
  HYPERSTAT_REQUEST_TYPE_IDU_CONTROLS = 3; // special request for Daikin-P1P2-variant controls
  HYPERSTAT_REQUEST_TYPE_IDU_FIELD_SETTINGS = 4; // special request for Daikin-P1P2-variant field settings
  HYPERSTAT_REQUEST_TYPE_SETTINGS_2 = 5; // standard device settings 2
  HYPERSTAT_REQUEST_TYPE_SETTINGS_3 = 6; // standard device settings 3
}

message HyperStatRequestMessage_t {
  HyperStatRequestType_e type = 1; // enum specifies what data is being requested
}

enum HyperStatTemperatureMode_e {
  HYPERSTAT_TEMP_MODE_SINGLE = 0;
  HYPERSTAT_TEMP_MODE_DUAL_FIXED_DB = 1;
  HYPERSTAT_TEMP_MODE_DUAL_VARIABLE_DB = 2;
}

enum HyperStatProfiles_t {
  HYPERSTAT_PROFILE_NONE = 0;
  HYPERSTAT_PROFILE_CONVENTIONAL_PACKAGE_UNIT = 1;
  HYPERSTAT_PROFILE_HEAT_PUMP_UNIT = 2;
  HYPERSTAT_PROFILE_2_PIPE_FANCOIL_UNIT = 3;
  HYPERSTAT_PROFILE_4_PIPE_FANCOIL_UNIT = 4;
  HYPERSTAT_PROFILE_VRV = 5;
  HYPERSTAT_PROFILE_SENSE = 6;
}

enum HyperstatAnalogInMapping_t {
  HYPERSTAT_AIN_CURRENT_0_10 = 0;
  HYPERSTAT_AIN_CURRENT_0_20 = 1;
  HYPERSTAT_AIN_CURRENT_0_50 = 2;
  HYPERSTAT_AIN_KEYCARD = 3;
  HYPERSTAT_AIN_DOORWINDOW = 4;
}

message HyperstatRelay_t {
  bool relay1Enable = 1;
  uint32 relay1Mapping = 2;
  bool relay2Enable = 3;
  uint32 relay2Mapping = 4;
  bool relay3Enable = 5;
  uint32 relay3Mapping = 6;
  bool relay4Enable = 7;
  uint32 relay4Mapping = 8;
  bool relay5Enable = 9;
  uint32 relay5Mapping = 10;
  bool relay6Enable = 11;
  uint32 relay6Mapping = 12;
}

message HyperstatAnalogOut_t {
  bool analogOut1Enable = 1;
  uint32 analogOut1Mapping = 2; // Mapping to cooling stage, heating stage etc depending on connection to hyperstat relay
  int32 analogOut1AtMinSetting = 3; // Voltage at which the cooler/damper/fan is at minimum position(1/10 V)
  int32 analogOut1AtMaxSetting = 4; // Voltage at which the cooler/damper/fan is at maximum position(1/10 V)
  bool analogOut2Enable = 5;
  uint32 analogOut2Mapping = 6; // Mapping to cooling stage, heating stage etc depending on connection to hyperstat relay
  int32 analogOut2AtMinSetting =7; // Voltage at which the cooler/damper/fan is at minimum position(1/10 V)
  int32 analogOut2AtMaxSetting = 8; // Voltage at which the cooler/damper/fan is at maximum position(1/10 V)
  bool analogOut3Enable = 9;
  uint32 analogOut3Mapping = 10; // Mapping to cooling stage, heating stage etc depending on connection to hyperstat relay
  int32 analogOut3AtMinSetting = 11; // Voltage at which the cooler/damper/fan is at minimum position(1/10 V)
  int32 analogOut3AtMaxSetting = 12; // Voltage at which the cooler/damper/fan is at maximum position(1/10 V)
}

message HyperstatAnalogIn_t {
  bool analogIn1Enable = 1;
  HyperstatAnalogInMapping_t analogIn1Mapping = 2; // Map to keycard, door sensor etc
  bool analogIn2Enable = 3;
  HyperstatAnalogInMapping_t analogIn2Mapping = 4; // Map to keycard, door sensor etc
}

message HyperStatTunersGeneric_t {
  uint32 unoccupiedSetback = 1;
  uint32 heatingDeadbandMultiplier = 2; // To be removed
  uint32 relayActivationHysteresis = 3;
  uint32 analogFanSpeedMultiplier = 4;
  uint32 humidityHysteresis = 5;
  uint32 forcedOccupiedTime = 6;
  uint32 autoAwayTime = 7;
  uint32 autoAwayZoneSetbackTemp = 8;
  uint32 maxSingleModeUserTemp = 9;
  uint32 minSingleModeUserTemp = 10;
}

message HyperStatTunersFcu_t {
  uint32 auxHeating1Activate  = 1;
  uint32 auxHeating2Activate  = 2;
  uint32 twoPipeHeatingThreshold = 3;
  uint32 twoPipeCoolingThreshold = 4;
  uint32 waterValueSamplingOnTime = 5;
  uint32 watreValueSamplingWaitTime = 6;
  uint32 waterValueSamplingDuringNoOperationOnTime = 7;
  uint32 waterValueSamplingDuringNoOperationOffTime = 8;
}

message HyperStatSettingsMessage_t {
  string roomName = 1;// [(nanopb).max_size = 20];
  int32 maxHeatingUserTemp = 2; // Maximum temperature the user can set in degrees F (default 70)
  int32 minHeatingUserTemp = 3; // Minimum temperature the user can set in degrees F (default 67)
  int32 maxCoolingUserTemp = 4; // Maximum temperature the user can set in degrees F (default 77)
  int32 minCoolingUserTemp = 5; // Minimum temperature the user can set in degrees F (default 74)
  sint32 temperatureOffset = 6; // Offset to be added to the measured room temperature (default 0). Unit is 1/10 of a degree F.
  int32 heatingDeadBand = 7; // Amount above set temperature at which heating is activated. Unit is 1/10 of a degree F.
  int32 coolingDeadBand = 8; // Amount below set temperature at which cooling is activated. Unit is 1/10 of a degree F.
  HyperStatTemperatureMode_e temperatureMode = 9;
  int32 co2AlertThreshold = 10;
  int32 vocAlertThreshold = 11;
  int32 pm25AlertThreshold = 12;
  bool displayCO2 = 13;
  bool displayPM25 = 14;
  bool displayVOC = 15;
  bool displayHumidity = 16;
  bool showCentigrade = 17; // 0: show Fahrenheit, 1: show Celsius
  bool enableExternal10kTemperatureSensor =18; // 1 if the external sensor is enabled
  bool beaconingEnabled = 19; // 0 if beaconing disabled, 1 if beaconing enabled
  uint32 humidityMinSetpoint = 20; // Minimum humidity setpont 0-100% in which Hyperstat will set system to Humidify if humidity level is less than
  uint32 humidityMaxSetpoint = 21; // Maximum humidity setpont 0-100% in which Hyperstat will set system to Dehumidity/Dry if humidity level is greater than
}

message HyperStatSettingsMessage2_t {
  HyperStatProfiles_t profile = 1;  // Current profile to be executed on Hyperstat
  bool enableForceOccupied = 2;
  bool enableAutoAway = 3;
  HyperstatRelay_t hyperstatRelayConfig = 4;
  bool thermistor1Enable = 5;
  bool thermistor2Enable = 6;
  HyperstatAnalogOut_t HyperstatAnalogOutConfig = 7;
  HyperstatAnalogIn_t HyperstatAnalogInConfig = 8;
  uint32 zoneCO2DamperOpeningRate = 9; // Same as system/ 10 (%/100ppm)
  uint32 zoneCO2Threshold = 10; // Same as system/800 (ppm)
  uint32 zoneCO2Target = 11; // Same as system/1000 (ppm)
  uint32 proportionalConstant = 12; // default 50 - k constants for Proportional in 1/100
  uint32 integralConstant = 13; // default 50 - k constant for Integral in 1/100
  uint32 proportionalTemperatureRange = 14; // default 15 - temp range in 1/10 deg that the proportional control will apply
  uint32 integrationTime = 15; // default 30 - time in  minutes the integration takes to max out
}

message HyperStatSettingsMessage3_t {
  HyperStatTunersGeneric_t genertiTuners = 1; // Generic tuner
  HyperStatTunersFcu_t	fcuTuners = 2;
}


enum HyperStatFanSpeed_e {
  HYPERSTAT_FAN_SPEED_OFF = 0;
  HYPERSTAT_FAN_SPEED_AUTO = 1;
  HYPERSTAT_FAN_SPEED_LOW = 2;
  HYPERSTAT_FAN_SPEED_MED = 3;
  HYPERSTAT_FAN_SPEED_HIGH = 4;
}

enum HyperStatConditioningMode_e {
  HYPERSTAT_CONDITIONING_MODE_OFF = 0;
  HYPERSTAT_CONDITIONING_MODE_AUTO = 1;
  HYPERSTAT_CONDITIONING_MODE_HEATING = 2;
  HYPERSTAT_CONDITIONING_MODE_COOLING = 3;
}

enum HyperStatOperatingMode_e {
  HYPERSTAT_OPERATING_MODE_OFF = 0;
  HYPERSTAT_OPERATING_MODE_HEATING = 1;
  HYPERSTAT_OPERATING_MODE_COOLING = 2;
}

message SystemTimePb_t {
  int32 day = 1; // The day of the week. Refer to ::DayOfWeek_t for a mapping of values.
  int32 hours = 2; // Number of hours passed since midnight, from 0 to 23
  int32 minutes = 3; // Number of minutes passed, from 0 to 59
}

message HyperStatAnalogOutputControl_t {
  int32 percent = 1; // Determines the output level (0-100%)
  bool pulseEnabled = 2; // 1 if the output should be pulsed, 0 if the output is a constant voltage
}

message HyperStatControlsMessage_t {
  SystemTimePb_t time = 1; // Used to update the current system time
  int32 setTempCooling = 2; // The desired room temperature. Measured in 2x degrees F. Default 150 (i.e. 75 degrees F).
  int32 setTempHeating = 3; // The desired room temperature. Measured in 2x degrees F. Default 150 (i.e. 75 degrees F).
  HyperStatFanSpeed_e fanSpeed = 4; // The desired fan speed
  HyperStatConditioningMode_e conditioningMode = 5;
  HyperStatOperatingMode_e operatingMode = 6; // The current operating mode
  bool relay1 = 7; // digital out for activation
  bool relay2 = 8; // digital out for activation
  bool relay3 = 9; // digital out for activation
  bool relay4 = 10; // digital out for activation
  bool relay5 = 11; // digital out for activation
  bool relay6 = 12; // digital out for activation
  bool reset = 13; // Force a reset of the device remotely when set to 1
  HyperStatAnalogOutputControl_t analogOut1 = 14; // output for PWM channel 1
  HyperStatAnalogOutputControl_t analogOut2 = 15; // output for PWM channel 2
  HyperStatAnalogOutputControl_t analogOut3 = 16; // output for PWM channel 3
  bool unoccupiedMode = 17; // CCU in scheduled unoccupied mode
}

message SensorReadingPb_t {
  int32 sensorType = 1; // Refer to ::SensorType_t for an enumeration of supported sensor types
  int32 sensorData = 2; // Refer to ::SensorType_t for units of measurement.
}

message HyperStatRegularUpdateMessage_t {
  int32 lqi = 1; // Link Quality Indicator of last received data packet
  int32 rssi = 2; // Received Signal Strength Indicator of last received data packet
  int32 roomTemperature = 3; // Room temperature in 1/10 of a degree F. This is the adjusted temp and is offset + measured temp.
  int32 humidity = 4; // Humidity in 1/10 of a percent
  int32 illuminance = 5; // Illuminance in tens of lux. Typical range for office lighting is 320-500 lux.
  int32 ultravioletIndex = 6; // A linear scale of UV radiation. Typical range is 0-10.
  int32 externalAnalogVoltageInput1 = 7; // External voltage sense in millivolts
  int32 externalAnalogVoltageInput2 = 8; // External voltage sense in millivolts
  int32 externalThermistorInput1 = 9; // External resistance sense in tens of ohms
  int32 externalThermistorInput2 = 10; // External resistance sense in tens of ohms
  repeated SensorReadingPb_t sensorReadings = 11;// [(nanopb).max_count = 6]; // List of type-value sensor readings
  bool occupantDetected = 12; // 0 is no, 1 is yes
}

message HyperStatLocalControlsOverrideMessage_t {
  int32 setTempCooling = 1; // The user-specified set temperature. Measured in 2x degrees F.
  int32 setTempHeating = 2; // The user-specified set temperature. Measured in 2x degrees F.
  HyperStatFanSpeed_e fanSpeed = 3; // The user-specified fan speed
  HyperStatConditioningMode_e conditioningMode = 4;
}

message HyperStatIduControlsMessage_t {
  int32 operationMode = 1;
  int32 fanSpeed = 2;
  int32 airflowDirection = 3;
  sint32 heatingSetTemperature = 4;
  sint32 coolingSetTemperature = 5;
  int32 masterController = 6;
}

message HyperStatIduStatusMessage_t {
  int32 indoorUnitState = 1; // Reflects the state of an indoor unit connected to the Hyperstat
  int32 responseType = 2; // Indicates if IDU status message is being sent in response to an IDU controls message or periodically
  int32 supportBitfield = 3;
  int32 supportFanSpeedControlLevels = 4;
  int32 operationMode = 5;
  int32 setOperationMode = 6;
  int32 masterOperationMode = 7;
  int32 fanSpeed = 8;
  int32 airflowDirection = 9;
  int32 coolHeatRight = 10;
  sint32 setTemperature = 11;
  int32 filterStatus = 12;
  int32 groupAddress = 13;
  int32 errorStatus = 14;
  int32 diagnosticStatus = 15;
  int32 iduTemperature = 16;
  repeated int32 thData = 17;// [(nanopb).max_count = 6]; //Temp reading from 6 thermistors.
}

message HyperStatCcuDatabaseSeedMessage_t {
  bytes encryptionKey = 1;// [(nanopb).max_size = 16, (nanopb).fixed_length = true]; // The encryption key to use for data sent over the mesh network to/from this device
  bytes serializedSettingsData = 2;// [(nanopb).max_size = 109, (nanopb).fixed_length = false]; // fixed type HYPERSTAT_SETTINGS_MESSAGE
  bytes serializedControlsData = 3;// [(nanopb).max_size = 109, (nanopb).fixed_length = false]; // fixed type HYPERSTAT_CONTROLS_MESSAGE
  bytes serializedSettings2Data = 4;// [(nanopb).max_size = 109, (nanopb).fixed_length = false]; // fixed type HYPERSTAT_SETTINGS2_MESSAGE
  bytes serializedSettings3Data = 5; // [(nanopb).max_size = 109, (nanopb).fixed_length = false]; // fixed type HYPERSTAT_SETTINGS3_MESSAGE
}


message HyperStatCmToCcuSerializedMessage_t {
  uint32 address = 1; // The (16-bit) mesh address of a device
  int32 cmLqi = 2; // LQI of this received data packet @ CM
  int32 cmRssi = 3; // RSSI of this received data packet @ CM
  int32 protocolMessageType = 4; // ProtocolMessageType_t identifier for the serialized message
  bytes serializedMessageData = 5;// [(nanopb).max_size = 109, (nanopb).fixed_length = false];
}

message HyperStatCcuToCmSerializedMessage_t {
  uint32 address = 1; // The (16-bit) mesh address of a device
  int32 protocolMessageType = 2; // ProtocolMessageType_t identifier for the serialized message
  bytes serializedMessageData = 3;// [(nanopb).max_size = 109, (nanopb).fixed_length = false];
}